# awdhwauhfuaduiafhawfafafawdfawda

./: README.md  pyproject.toml
src/py_res_w7_some1rxndom/: __main__.py  main.css  main.py
